# pyosutools

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  TODO.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: conf.py  index.rst
pyosudb/: __init__.py  collectiondb.py  datatypes.py  osudb.py  presencedb.py  scoresdb.py  utils.py
pyosutools/: __init__.py  datatypes.py  utils.py
pyosutools/beatmap/: __init__.py  beatmap.py
pyosutools/beatmaps/: __init__.py  _parsers.py  beatmap.py  datatypes.py
pyosutools/database/: __init__.py  collection.py  presence.py  scores.py
pyosutools/db/: __init__.py  collection.py  datatypes.py  osu.py  presence.py  scores.py
tests/: test_beatmap.py  test_db.py  test_parsing.py
tests/resources/: beatmaps.sql  collection.db  osu!.db  presence.db  scores.db
tests/resources/db_files/: collection.db  osu!.db  presence.db  scores.db
