[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyosudb"
version = "0.1.0"
authors = [
  { name="OlegSuperBro", email="olegrakovic323@gmail.com" },
]
description = "Parsing osu! database files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/OlegSuperBro/pyosudb"
"Bug Tracker" = "https://github.com/OlegSuperBro/pyosudb/issues"