[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyosutools"
dynamic = ["version"]
authors = [
  { name="OlegSuperBro", email="olegrakovic323@gmail.com" },
]
description = "Parsing osu! files for easier usage"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aenum==3.1.15"
]
[project.urls]
"Homepage" = "https://github.com/OlegSuperBro/pyosutools"
"Bug Tracker" = "https://github.com/OlegSuperBro/pyosutools/issues"

[tool.setuptools.dynamic]
version = {attr = "pyosutools.__version__"}